@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.655 2006/06/17 18:22:44 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.656 2006/06/25 02:28:19 agaffney Exp $
+
+  24 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIPortage.py:
+  pass proper PORTAGE_TMPDIR
 
   17 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
